--- a/client/app/dashboard/looking/looking-details/profile.section.html
+++ b/client/app/dashboard/looking/looking-details/profile.section.html
@@ -1,7 +1,18 @@
-<span ng-click="detail.previous()" ng-hide="currentRoom==0" class="previousArrow"><i class="fa fa-arrow-left previousArrow">&nbsp;&nbsp;Previous</i></span>
-<span ng-click="detail.next()" ng-hide="currentRoom==(detail.allIds.length-1)" class="nextArrow">Next&nbsp;&nbsp;<i class="fa fa-arrow-right nextArrow"></i></span>
+<!--<span ng-click="detail.previous()" ng-hide="currentRoom==0" class="previousArrow"><i class="fa fa-arrow-left previousArrow">&nbsp;&nbsp;Previous</i></span>-->
+<!--<span ng-click="detail.next()" ng-hide="currentRoom==(detail.allIds.length-1)" class="nextArrow">Next&nbsp;&nbsp;<i class="fa fa-arrow-right nextArrow"></i></span>-->
 
-<h2 style="clear:both; padding-top:20px">{{detail.lookingDetail.relatedUserId.firstname}}'s profile</h2>
+<div class="row" style="padding: 0;">
+  <div class="col-xs-2 col-sm-2 col-md-2 col-lg-2 back-link" style="cursor: pointer;">
+    <a ng-click="detail.previous()" ng-hide="currentRoom==0"><i class="fa fa-arrow-left"></i>&nbsp;&nbsp;Previous</a>
+  </div>
+
+  <div class="col-xs-2 col-sm-2 col-md-2 col-lg-2 back-link pull-right" style="text-align: right;cursor: pointer;">
+    <a ng-click="detail.next()" ng-hide="currentRoom==(detail.allIds.length-1)">Next&nbsp;&nbsp;<i class="fa fa-arrow-right"></i></a>
+  </div>
+</div>
+
+
+<h2 style="clear:both;">{{detail.lookingDetail.relatedUserId.firstname}}'s profile</h2>
 
 <!-- Info about the user -->
 
