Landing page changes, first draft

--- a/client/app/landing/landing.html
+++ b/client/app/landing/landing.html
@@ -1,6 +1,6 @@
 <div ng-include="'components/layout/navbar/navbar.html'"></div>
 <div ng-include="'app/landing/jumbotron.html'"></div>
-<div ng-include="'app/landing/valueicons.html'"></div>
+<!--<div ng-include="'app/landing/valueicons.html'"></div>-->
 <div ng-include="'app/landing/corefeatures.html'"></div>
 <div ng-include="'app/landing/howitworks.html'"></div>
 <div ng-include="'app/landing/community.html'"></div>
