--- a/client/app/landing/corefeatures.html
+++ b/client/app/landing/corefeatures.html
@@ -11,52 +11,54 @@
       </ul>
     </div>
     <div class="col-sm-5 col-xs-12 col-md-5 col-lg-5">
-      <img class="img-responsive center-block square roommatesPicture" src="./../assets/images/values/roommates.png" alt="Roommates">
+      <img class="center-block" src="./../assets/images/values/iMac.png" alt="Roommates" style="overflow: hidden">
     </div>
   </div>
 
-  <hr class="featurette-divider">
+  <!-- Commeting out additional features for now -->
 
-  <div class="row featurette">
-    <div class="col-sm-5 col-xs-12 col-md-5 col-lg-5">
-      <img class="img-responsive center-block square roommatesPicture" src="./../assets/images/values/heatmap.png" alt="Heatmap">
-    </div>
-    <div class="col-sm-7 col-xs-12 col-md-7 col-lg-7">
-      <h2 class="featurette-heading">Connect with other students. <span class="text-muted">Around you.</span></h2>
-      <ul class="icon-list">
-        <li><i class="fa fa-bubbles4 fa-lg"></i>&nbsp;&nbsp;Meet new students around you
-          <ul class="icon-list">
-            <li><i class="fa fa-lock3 fa-lg"></i>&nbsp;&nbsp;Address is not shared and always private</li>
-          </ul>
-        </li>
-        <li><i class="fa fa-bubble-heart fa-lg"></i>&nbsp;&nbsp;Learn about your area and safe neighborhoods</li>
-        <li><i class="fa fa-smiley2 fa-lg"></i>&nbsp;&nbsp;Get the most out of living off-campus</li>
-      </ul>
-    </div>
-  </div>
+  <!--<hr class="featurette-divider">-->
 
-  <hr class="featurette-divider">
+  <!--<div class="row featurette">-->
+    <!--<div class="col-sm-5 col-xs-12 col-md-5 col-lg-5">-->
+      <!--<img class="img-responsive center-block square roommatesPicture" src="./../assets/images/values/heatmap.png" alt="Heatmap">-->
+    <!--</div>-->
+    <!--<div class="col-sm-7 col-xs-12 col-md-7 col-lg-7">-->
+      <!--<h2 class="featurette-heading">Connect with other students. <span class="text-muted">Around you.</span></h2>-->
+      <!--<ul class="icon-list">-->
+        <!--<li><i class="fa fa-bubbles4 fa-lg"></i>&nbsp;&nbsp;Meet new students around you-->
+          <!--<ul class="icon-list">-->
+            <!--<li><i class="fa fa-lock3 fa-lg"></i>&nbsp;&nbsp;Address is not shared and always private</li>-->
+          <!--</ul>-->
+        <!--</li>-->
+        <!--<li><i class="fa fa-bubble-heart fa-lg"></i>&nbsp;&nbsp;Learn about your area and safe neighborhoods</li>-->
+        <!--<li><i class="fa fa-smiley2 fa-lg"></i>&nbsp;&nbsp;Get the most out of living off-campus</li>-->
+      <!--</ul>-->
+    <!--</div>-->
+  <!--</div>-->
 
-  <div class="row featurette">
-    <div class="col-sm-7 col-xs-12 col-md-7 col-lg-7">
-      <h2 class="featurette-heading">Search available rooms. <span class="text-muted">Look for roommates.</span></h2>
-      <ul class="icon-list">
-        <li><i class="fa fa-busx fa-lg"></i>&nbsp;&nbsp;Commute times to your university</li>
-        <li><i class="fa fa-usersx fa-lg"></i>&nbsp;&nbsp;Roommate profiles</li>
-        <li><i class="fa fa-searchx fa-lg"></i>&nbsp;&nbsp;Find what you need
-          <ul class="icon-list">
-            <li><i class="fa fa-calendarx fa-lg"></i>&nbsp;&nbsp;Available date</li>
-            <li><i class="fa fa-bathroomx fa-lg"></i>&nbsp;&nbsp;Private or shared bathroom</li>
-            <li><i class="fa fa-three fa-lg"></i>&nbsp;&nbsp;Number of roommates</li>
-            <li><i class="fa fa-bedroomx fa-lg"></i>&nbsp;&nbsp;Room type - single or double</li>
-          </ul>
-        </li>
-        <li><img class="icons" src="./../assets/images/mini-icons/heart6.svg" />Follow a property</li>
-      </ul>
-    </div>
-    <div class="col-sm-5 col-xs-12 col-md-5 col-lg-5">
-      <img class="img-responsive center-block square roommatesPicture" src="./../assets/images/values/roomDetail.png" alt="Rooms">
-    </div>
-  </div>
+  <!--<hr class="featurette-divider">-->
+
+  <!--<div class="row featurette">-->
+    <!--<div class="col-sm-7 col-xs-12 col-md-7 col-lg-7">-->
+      <!--<h2 class="featurette-heading">Search available rooms. <span class="text-muted">Look for roommates.</span></h2>-->
+      <!--<ul class="icon-list">-->
+        <!--<li><i class="fa fa-busx fa-lg"></i>&nbsp;&nbsp;Commute times to your university</li>-->
+        <!--<li><i class="fa fa-usersx fa-lg"></i>&nbsp;&nbsp;Roommate profiles</li>-->
+        <!--<li><i class="fa fa-searchx fa-lg"></i>&nbsp;&nbsp;Find what you need-->
+          <!--<ul class="icon-list">-->
+            <!--<li><i class="fa fa-calendarx fa-lg"></i>&nbsp;&nbsp;Available date</li>-->
+            <!--<li><i class="fa fa-bathroomx fa-lg"></i>&nbsp;&nbsp;Private or shared bathroom</li>-->
+            <!--<li><i class="fa fa-three fa-lg"></i>&nbsp;&nbsp;Number of roommates</li>-->
+            <!--<li><i class="fa fa-bedroomx fa-lg"></i>&nbsp;&nbsp;Room type - single or double</li>-->
+          <!--</ul>-->
+        <!--</li>-->
+        <!--<li><img class="icons" src="./../assets/images/mini-icons/heart6.svg" />Follow a property</li>-->
+      <!--</ul>-->
+    <!--</div>-->
+    <!--<div class="col-sm-5 col-xs-12 col-md-5 col-lg-5">-->
+      <!--<img class="img-responsive center-block square roommatesPicture" src="./../assets/images/values/roomDetail.png" alt="Rooms">-->
+    <!--</div>-->
+  <!--</div>-->
 
 </div> <!-- /END THE FEATURETTES -->
