--- a/client/app/landing/corefeatures.html
+++ b/client/app/landing/corefeatures.html
@@ -11,7 +11,7 @@
       </ul>
     </div>
     <div class="col-sm-5 col-xs-12 col-md-5 col-lg-5">
-      <img class="center-block" src="./../assets/images/values/iMac.png" alt="Roommates" style="overflow: hidden">
+      <img class="center-block" src="./../assets/images/values/iMac.png" alt="Roommates" style="position: absolute; right:-160%; width: 150%;">
     </div>
   </div>
 
