Landing page changes

--- a/client/app/account/login/login.html
+++ b/client/app/account/login/login.html
@@ -1,6 +1,6 @@
 <div class="main">
   <div ng-include="'components/layout/navbar/navbar.html'"></div>
-  <section class="login-box white-box" ng-if="!loading && !sendingEmail && !verificationMailResend && !pwdResetMailSend">
+  <section class="login-box white-box-login" ng-if="!loading && !sendingEmail && !verificationMailResend && !pwdResetMailSend">
     <h2 class="heading">Sign In</h2>
 
     <div class="row" ng-if="showEmail && !invalidToken">
