--- a/client/app/landing/community.html
+++ b/client/app/landing/community.html
@@ -4,7 +4,7 @@
   <div class="community">
     <div class="row  text-center community-header">
       <div class="col-sm-12">
-        <h1>campusly community<sup style="font-size: 40%; top: -1em;"> (Coming Soon)</sup></h1>
+        <h1>campusly community</h1>
       </div>
     </div>
     <!-- START THE FEATURETTES -->
