New landing page. Optimized for mobile

--- a/client/app/landing/join.html
+++ b/client/app/landing/join.html
@@ -4,13 +4,11 @@
   <div class="container">
     <div class="row  text-center footer-msg">
       <div class="col-sm-12 col-xs-12 col-md-12 col-lg-12">
-        <h1>Join the campusly community</h1>
+        <h1>Start connecting today!</h1>
       </div>
     </div>
     <div class="row text-center lead-btn">
-      <div class="col-sm-12 col-xs-12 col-md-12 col-lg-12">
-        <p><a class="btn btn-rented-large secondary" ui-sref="signup" role="button">Get Started For Free</a></p>
-      </div>
+      <a class="btn-rented-large secondary" ui-sref="signup" role="button">Sign Up For Free!</a>
     </div>
     <div class="row text-center lead-btn">
       <div class="col-sm-12 col-xs-12 col-md-12 col-lg-12">
