--- a/client/app/landing/jumbotron.html
+++ b/client/app/landing/jumbotron.html
@@ -32,7 +32,7 @@
           </label>
 
           <div class="options">
-            <input type="submit" value="Sign me up!" class="btn-rented-large primary">
+            <input type="submit" value="Sign up for free!" class="btn-rented-large primary">
             <span>Already have an account? <a class="link" ui-sref="login">Sign in</a></span>
           </div>
 
