--- a/client/app/landing/landing.html
+++ b/client/app/landing/landing.html
@@ -4,5 +4,5 @@
 <div ng-include="'app/landing/corefeatures.html'" style="overflow: hidden;position: relative;min-height: 680px;"></div>
 <div ng-include="'app/landing/howitworks.html'"></div>
 <div ng-include="'app/landing/community.html'"></div>
-<div ng-include="'app/landing/joinrented.html'"></div>
+<div ng-include="'app/landing/join.html'"></div>
 
