Updated time when daily email is sent. Changed Mixpanel tracking to track unique user at sign-in instead of at dashboard. Changed spinner white box to no box shadow

--- a/client/app/account/login/login.html
+++ b/client/app/account/login/login.html
@@ -100,13 +100,13 @@
 
   </section>
 
-  <section class="login-box white-box " style="text-align: center" ng-show="pwdResetMailSend">
+  <section class="login-box white-box-noshadow " style="text-align: center" ng-show="pwdResetMailSend">
     <h2 class="heading">Password reset in process</h2>
     <i class="fa fa-unlock-alt fa-5x"></i>
     <h4>You have requested to reset your Campusly account password. <br><br>Confirmation link has been sent to {{user.email}}.</h4><br/>
   </section>
 
-  <section class="login-box white-box " style="text-align: center" ng-if="verificationMailResend">
+  <section class="login-box white-box-noshadow " style="text-align: center" ng-if="verificationMailResend">
     <i class="fa fa-envelope-o fa-5x"></i>
     <h4 class="heading">Please verify your university email address <br>in the next 30min. <br><br>Verification email has been sent to {{user.email}}.</h4>
   </section>
