finalizing CAPS issue

--- a/client/app/landing/jumbotron.html
+++ b/client/app/landing/jumbotron.html
@@ -24,7 +24,7 @@
           </label>
 
           <label class="lbl">
-            <input type="email" name="email" ng-model="landing.user.email" ng-pattern="/\.edu$/"  placeholder="Your email address (.edu required)" ng-class="{ 'has-success': form.email.$valid && landing.submitted, 'has-error': form.email.$invalid && landing.submitted }" required>
+            <input type="email" name="email" ng-model="landing.user.email" placeholder="Your email address (.edu required)" ng-class="{ 'has-success': form.email.$valid && landing.submitted, 'has-error': form.email.$invalid && landing.submitted }" required>
           </label>
 
           <label class="lbl">
