--- a/client/app/account/login/login.html
+++ b/client/app/account/login/login.html
@@ -61,7 +61,7 @@
   <form class="main-form" name="form" ng-submit="login(form)" ng-if="showForm" novalidate>
       <a ng-if="showResendPartial && user.email && !errors.password" class="pull-right" style="font-size: 0.8em; position: absolute; right: 10%" ng-click="resendEmail(form)">Resend verification e-mail</a>
       <label class="lbl">
-        <input id="email" type="email" name="email" ng-model="user.email" placeholder="Email address (.edu required)" ng-pattern="/\.edu$/ || /\.campusly.org$/ " ng-class="{ 'has-success': form.email.$valid && submitted, 'has-error': form.email.$invalid && submitted || errors.mail}" required>
+        <input id="email" type="email" name="email" ng-model="user.email" placeholder="Email address (.edu required)" ng-class="{ 'has-success': form.email.$valid && submitted, 'has-error': form.email.$invalid && submitted || errors.mail}" required>
       </label>
 
       <a ng-if="!invalidToken" class="pull-right" style="font-size: 0.8em; position: absolute; right: 10%" ng-click="toogleNewPasswordAddon()">{{reset}}</a>
